--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,12 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Load the Data\n",
-    "df = pd.read_csv(\"german_credit_data.csv\",index_col=0)"
+    "df = pd.read_csv(\"german_credit_data.csv\",index_col=0) # Viết tắt của data - frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,67 +59,67 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>34</td>\n",
-       "      <td>female</td>\n",
-       "      <td>3</td>\n",
-       "      <td>own</td>\n",
-       "      <td>little</td>\n",
-       "      <td>moderate</td>\n",
-       "      <td>1501</td>\n",
-       "      <td>9</td>\n",
-       "      <td>education</td>\n",
-       "      <td>bad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>349</th>\n",
-       "      <td>32</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2</td>\n",
-       "      <td>free</td>\n",
-       "      <td>rich</td>\n",
-       "      <td>moderate</td>\n",
-       "      <td>1136</td>\n",
-       "      <td>9</td>\n",
-       "      <td>education</td>\n",
-       "      <td>bad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>740</th>\n",
-       "      <td>32</td>\n",
+       "      <th>780</th>\n",
+       "      <td>25</td>\n",
        "      <td>male</td>\n",
        "      <td>2</td>\n",
        "      <td>own</td>\n",
-       "      <td>moderate</td>\n",
        "      <td>little</td>\n",
-       "      <td>2325</td>\n",
-       "      <td>24</td>\n",
-       "      <td>car</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>4933</td>\n",
+       "      <td>39</td>\n",
+       "      <td>radio/TV</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>31</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>own</td>\n",
+       "      <td>little</td>\n",
+       "      <td>little</td>\n",
+       "      <td>3104</td>\n",
+       "      <td>18</td>\n",
+       "      <td>business</td>\n",
        "      <td>good</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>688</th>\n",
+       "      <th>588</th>\n",
+       "      <td>47</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>own</td>\n",
+       "      <td>little</td>\n",
+       "      <td>little</td>\n",
+       "      <td>1217</td>\n",
+       "      <td>18</td>\n",
+       "      <td>domestic appliances</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
        "      <td>35</td>\n",
        "      <td>male</td>\n",
        "      <td>2</td>\n",
        "      <td>own</td>\n",
-       "      <td>moderate</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2753</td>\n",
-       "      <td>9</td>\n",
+       "      <td>moderate</td>\n",
+       "      <td>2728</td>\n",
+       "      <td>15</td>\n",
        "      <td>radio/TV</td>\n",
        "      <td>good</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>770</th>\n",
-       "      <td>26</td>\n",
+       "      <th>146</th>\n",
+       "      <td>39</td>\n",
        "      <td>female</td>\n",
        "      <td>2</td>\n",
-       "      <td>rent</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>own</td>\n",
        "      <td>little</td>\n",
-       "      <td>2812</td>\n",
-       "      <td>24</td>\n",
+       "      <td>little</td>\n",
+       "      <td>860</td>\n",
+       "      <td>6</td>\n",
        "      <td>car</td>\n",
        "      <td>good</td>\n",
        "    </tr>\n",
@@ -129,21 +129,21 @@
       ],
       "text/plain": [
        "     Age     Sex  Job Housing Saving accounts Checking account  Credit amount   \n",
-       "195   34  female    3     own          little         moderate           1501  \\\n",
-       "349   32    male    2    free            rich         moderate           1136   \n",
-       "740   32    male    2     own        moderate           little           2325   \n",
-       "688   35    male    2     own        moderate              NaN           2753   \n",
-       "770   26  female    2    rent             NaN           little           2812   \n",
+       "780   25    male    2     own          little         moderate           4933  \\\n",
+       "216   31    male    2     own          little           little           3104   \n",
+       "588   47    male    1     own          little           little           1217   \n",
+       "138   35    male    2     own             NaN         moderate           2728   \n",
+       "146   39  female    2     own          little           little            860   \n",
        "\n",
-       "     Duration    Purpose  Risk  \n",
-       "195         9  education   bad  \n",
-       "349         9  education   bad  \n",
-       "740        24        car  good  \n",
-       "688         9   radio/TV  good  \n",
-       "770        24        car  good  "
+       "     Duration              Purpose  Risk  \n",
+       "780        39             radio/TV   bad  \n",
+       "216        18             business  good  \n",
+       "588        18  domestic appliances   bad  \n",
+       "138        15             radio/TV  good  \n",
+       "146         6                  car  good  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -182,12 +182,12 @@
     }
    ],
    "source": [
-    "df.info()\n"
+    "df.info() # 1000 điểm dữ liệu là ít - mô hình khó chính xác - Thu thập nhiều dữ liệu hơn\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "max      75.000000     3.000000   18424.000000    72.000000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2341,7 +2341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
